--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ SUPPORT_ROLE_ID=your-support-role-id
 MONGODB=your-string
 #Search API Key
 SERP_API_KEY=Your-API-Key
+#Safe Browsing API
+GOOGLE_SAFE_BROWSING_KEY=your_api_key_here
